# neural-jacobian-field

./: .gitignore  .gitmodules  LICENSE  LICENSE.md  README.md  install.sh
project/: install.sh  pyproject.toml  requirements.txt  setup.py
project/configurations/: config.yaml
project/configurations/dataset/: dataset_pneumatic_hand_only.yaml  dataset_toy_arm.yaml  pneumatic_hand_only.yaml  toy_arm.yaml
project/configurations/model/: model_toy_arm.yaml  pneumatic_hand_only.yaml  toy_arm.yaml
project/jacobian/: monitor_dir.sh  run_grid_transformer.sh  train.py
project/jacobian/config/: __init__.py  common.py
project/jacobian/configurations/: config.yaml
project/jacobian/dataset/: __init__.py  data_module.py  planar_hand_dataset.py  pusher_dataset.py  types.py
project/jacobian/model_components/: unet.py  vit.py  vit_new.py
project/jacobian/models/: __init__.py  model_wrapper_base.py  model_wrapper_planar_hand.py  model_wrapper_pusher.py
project/jacobian/utils/: inference.py  io.py  logging_utils.py  visualizations.py  wandb_ckpt.py  wandb_logger.py
project/neural_jacobian_field/: train.py
project/neural_jacobian_field/config/: common.py
project/neural_jacobian_field/configurations/: config.yaml
project/neural_jacobian_field/data/: data_module.py  validation_wrapper.py
project/neural_jacobian_field/encoders/: __init__.py  encoder_base.py  resnet_encoder.py
project/neural_jacobian_field/inference/: __init__.py  action.py  config.py  jacobian_color_map.py  loaders.py  plotting.py
project/raft_wrapper/: __init__.py  plotting.py  raft.py
(+70 files in other folders)
