[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-jacobian-field"
version = "0.1.0"
description = "Neural Jacobian Field Research Framework"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy<2",
]

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
jacobian = ["**/*.yaml"]
neural_jacobian_field = ["**/*.yaml"]
